adding cache disabling for the test (which keeps it pure)

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,11 @@
     <meta name="Rating" content="General" />
     <link rel="stylesheet" type="text/css" media="screen" href="test.css" />
     <script type="text/javascript" src="../vendors/eCSStender.js/src/eCSStender.js"></script>
+    <script type="text/javascript">
+      // <![CDATA[
+      eCSStender.disableCache();
+      // ]]>
+    </script>
     <script type="text/javascript" src="../src/eCSStender.CSS3-backgrounds-and-borders.js"></script>
   </head>
   <body>
